Update credits after rebuttal

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Contractive Diffusion Policies: Robust Action Diffusion via Contractive Score-based Sampling with Differential Equations.">
-  <meta name="keywords" content="Diffusion Models, Imitation Learning, Reinforcement Learning">
+        content="Contractive Diffusion Policies: Robust Action Diffusion via Contractive Score-based Sampling with Differential Equations">
+  <meta name="keywords" content="Diffusion Models, Imitation Learning, Reinforcement Learning, ICLR, Diffusion Policies, Offline Learning, Control, Robotics, Contractive Diffusion Policies, Contractive Score-based Sampling, ODE Sampling, Score Matching, Stochastic Differential Equations, SDEs, Robustness, Data Efficiency">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contractive Diffusion Policies: Robust Action Diffusion via Contractive Score-Based Sampling with Differential Equations.</title>
 
@@ -83,58 +83,59 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Contractive Diffusion Policies: Robust Action Diffusion via Contractive Score-based Sampling with Differential Equations</h1>
+          <h1 class="title is-1 publication-title">Contractive Diffusion Policies</h1>
+          <p class="subtitle">Robust Action Diffusion via Contractive Score-based Sampling with Differential Equations</p>
           <div class="is-size-5 publication-authors">
-            <!-- <span class="author-block">
-              <a href="https://keunhong.com">Keunhong Park</a><sup>1</sup>,</span>
-            <span class="author-block"> -->
             <span class="author-block">
-              <a>Anonymous Authors</a></span>
+              <a href="https://mila.quebec/en/directory/amin-abyaneh">Amin Abyaneh</a><sup>1,2,4</sup>,</span>
             <span class="author-block">
-              <!-- <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup>,</span>
+              <a href="">Charlotte Morissette</a><sup>2,3,4</sup>,</span>
             <span class="author-block">
-              <a href="https://jonbarron.info">Jonathan T. Barron</a><sup>2</sup>,
+              <a href="">Mohamad H. Danesh</a><sup>2,3,4</sup>,
             </span>
             <span class="author-block">
-              <a href="http://sofienbouaziz.com">Sofien Bouaziz</a><sup>2</sup>,
+              <a href="">Anas Houssaini</a><sup>2,3,4</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.danbgoldman.com">Dan B Goldman</a><sup>2</sup>,
+              <a href="">David Meger</a><sup>2,3,4</sup>,
             </span>
             <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Steven M. Seitz</a><sup>1,2</sup>,
+              <a href="">Gregory Dudek</a><sup>2,3,4</sup>,
             </span>
             <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">Ricardo Martin-Brualla</a><sup>2</sup>
-            </span> -->
+              <a href="https://sites.google.com/site/hsiuchinlin/">Hsiu-Chin Lin</a><sup>1,2,3,4</sup>
+            </span>
           </div>
-<!--
+
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University of Washington,</span>
-            <span class="author-block"><sup>2</sup>Google Research</span>
-          </div> -->
+            <span class="author-block"><sup>1</sup>Department of Electrical and Computer Engineering, McGill University</span>
+            <span class="author-block"><sup>2</sup>Center for Intelligent Machines, McGill University</span>
+            <span class="author-block"><sup>3</sup>Department of Computer Science, McGill University</span>
+            <span class="author-block"><sup>4</sup>Mila–Quebec AI Institute</span>
+
+          </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <!-- <span class="link-block">
-                <a href="https://arxiv.org/pdf/2011.12948"
+              <span class="link-block">
+                <a href="https://openreview.net/forum?id=iKJbmx1iuQ"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper</span>
+                  <span>OpenReview</span>
                 </a>
-              </span> -->
-              <!-- <span class="link-block">
-                <a href="https://arxiv.org/abs/2011.12948"
+              </span>
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/2601.01003"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span> -->
+              </span>
               <!-- Video Link. -->
               <!-- <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
@@ -162,7 +163,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (Deployment)</span>
+                  <span>Deploy</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
