--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Contractive Diffusion Policies</h1>
-          <p class="subtitle">Robust Action Diffusion via Contractive Score-based Sampling with Differential Equations</p>
+            <h1 class="title is-1 publication-title" style="font-size: 3.5rem;">Contractive Diffusion Policies</h1>
+            <p class="subtitle is-size-3" style="font-size: 2rem;">Robust Action Diffusion via Contractive Score-based Sampling with Differential Equations</p>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://mila.quebec/en/directory/amin-abyaneh">Amin Abyaneh</a><sup>1,2,4</sup>,</span>
             <span class="author-block">
-              <a href="">Charlotte Morissette</a><sup>2,3,4</sup>,</span>
+              <a href="https://charliem7.github.io/">Charlotte Morissette</a><sup>2,3,4</sup>,</span>
             <span class="author-block">
-              <a href="">Mohamad H. Danesh</a><sup>2,3,4</sup>,
+              <a href="https://modanesh.github.io/">Mohamad H. Danesh</a><sup>2,3,4</sup>,
             </span>
             <span class="author-block">
-              <a href="">Anas Houssaini</a><sup>2,3,4</sup>,
+              <a href="https://anashoussaini.github.io/">Anas Houssaini</a><sup>2,3,4</sup>,
             </span>
             <span class="author-block">
               <a href="">David Meger</a><sup>2,3,4</sup>,
@@ -187,7 +187,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="./static/images/method_large.jpg"
+      <img src="./static/images/method_large.png"
            alt="Method overview"
            style="max-width: 100%; height: auto;"/>
 
