--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
         <div class="column has-text-centered">
             <h1 class="title is-1 publication-title" style="font-size: 3.5rem;">Contractive Diffusion Policies</h1>
             <p class="subtitle is-size-3" style="font-size: 2rem;">Robust Action Diffusion via Contractive Score-based Sampling with Differential Equations</p>
+          <div class="conference-badge">
+            <span class="tag is-large is-info is-light">
+              <strong>ICLR 2026</strong> · Conference Paper
+            </span>
+          </div>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://mila.quebec/en/directory/amin-abyaneh">Amin Abyaneh</a><sup>1,2,4</sup>,</span>
