--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p class="subtitle is-size-3" style="font-size: 2rem;">Robust Action Diffusion via Contractive Score-based Sampling with Differential Equations</p>
           <div class="conference-badge">
             <span class="tag is-large is-info is-light">
-              <strong>ICLR 2026</strong> · Conference Paper
+              <strong>ICLR 2026 Conference Paper</strong>
             </span>
           </div>
           <div class="is-size-5 publication-authors">
